# google-news-scraper-demo

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  hello.py  main.py  new_plan.md  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
.jenkins/: Jenkinsfile
.jenkins/configs/: jenkins.yaml
.jenkins/pipelines/: simple-pipeline.groovy
.jenkins/scripts/: deploy.sh  test.sh
config/: config.py  scheduled_config.cfg  settings.cfg
data/: E20_Fuel_20250907_212851.json  E20_Fuel_20250907_212915.csv
deployment/: README.md
deployment/docker/: Dockerfile  docker-compose.api.yml  docker-compose.nginx.yml  docker-compose.redis.yml  docker-compose.yml  nginx.conf
deployment/kubernetes/: deployment.yaml
deployment/scripts/: deploy.sh  logs.sh  stop.sh
docs/: PR.md  project_documentation.md  tasks.md  technical_spec.md  vision.md
gnews/: requirements.txt
logs/: README.md
scripts/: generate_scheduled_task.py  resolve_urls.py
src/: __init__.py  main.py  parser.py  scraper.py
src/api/: main.py
src/api/routes/: artifacts.py  health.py  news.py
src/cli/: news_cli.py
src/common/: cache.py  config.py  exceptions.py  logger.py  router.py
src/common/config/: mcp_config.py
src/common/utils/: artifacts.py  exceptions.py  logger.py  news_helper.py  router.py
src/core/: main.py  mcp_server.py  news_types.py  parser.py  scheduler.py  scheduler_main.py  scraper.py
src/database/: README.md  __init__.py  config.py
src/database/connections/: __init__.py
src/database/migrations/: __init__.py
src/database/models/: __init__.py
src/database/repositories/: __init__.py
src/mcp_tools/: news_tools.py
src/models/: schemas.py
src/scrapers/: __init__.py  article_processor.py  article_scraper.py  full_article_scraper.py  google_news_decoder.py  google_news_url_decoder.py  parser.py  scraper.py  url_resolver.py  weather_processor.py  weather_scraper.py
src/services/: news_service.py
src/tests/: test_retry_mechanisms.py  test_scheduled_collection.py
src/utils/: markdown_generator.py  retry_utils.py  utils.py  validation.py
src/workers/: __init__.py  celery_app.py  worker_manager.py
src/workers/tasks/: cleanup_tasks.py  news_tasks.py
templates/: template_scheduled_task.bat  template_scheduled_task.ps1  template_scheduled_task.vbs
tests/: test_cli_flags.py  test_full_scraping.py  test_functionality.py  test_homepage.py  test_integration.py  test_new_features.py  test_news_mcp.py  test_url_decoder.py
